# transkrip-wawancara-exe

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
app/: __init__.py  cli.py  main.py
app/core/: __init__.py  chunking.py  ffmpeg.py  pipeline.py
app/core/engines/: __init__.py
app/core/exporters/: __init__.py  txt.py
app/core/postprocess/: __init__.py
app/ui/: __init__.py  state.py  theme.py  widgets.py  window.py
tests/: __init__.py  test_engines.py  test_exporters.py  test_ffmpeg_probe.py  test_pipeline_smoke.py  test_postprocess.py
