[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gui-voice-to-text"
version = "0.2.0"
description = "GUI Voice To Text — transkrip audio/video ke TXT bersih, offline, Windows 10/11, support file panjang."
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "el-pablos" },
]
dependencies = [
    "PySide6>=6.6",
    "faster-whisper>=1.0",
    "redis>=5.0",
    "python-dotenv>=1.0",
    "python-docx>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "black>=24.0",
    "pyinstaller>=6.0",
]

[project.scripts]
transkrip = "app.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.black]
target-version = ["py311"]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
show_missing = true
